| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-02-19  Admin       Bug         Fixed #142 - Admin DAL has reference to a plugin (Marek)
2007-02-19  Admin       Bug         Fixed #137 - Cannot expand conversion details on statistics-conversion
                                    page (Marek)
2007-02-19  General     Feature     Fixed #128 - Allow FTP using PASV (Marek)
2007-02-19  Delivery    Bug         Fixed #162 - Iframe refresh broken in single host enviroments (Chris)
2007-02-12  Admin       Bug         Fixed #127 - Rebuild Banner Cache doesn't honor autohtml setting (Marek)
2007-02-12  DAL         Feature     Fixed #10 - phpAds_sqldie error in /lib/max/Dal/Common (Marek)
2007-02-12  Maintenance Bug         Fixed #123 - Infinite loop in lib/max/Dal/Maintenance.php (Marek)
2007-02-12  Maintenance Bug         Fixed #121 - Undefined index SERVER_NAME when invoking maintenance script
                                    (Marek)
2007-02-12  General     Bug         Fixed #24 - lib/max/DaySpan.php: PHP Warning: Call-time pass-by-reference
                                    deprecated (Marek)
2007-02-12  Admin       Bug         Fixed #74 - Make all drop-down lists sort the same way (Marek)
2007-02-12  Delivery    Bug         Fixed #4 - Invocation code for popups generating double comment close
                                    (Marek)
2007-02-12  Admin       Bug         Fixed #59 - Restored russian, turkish and hebrew translations (Marek)
2007-02-02  Admin       Bug         Fixed #131 - Simulator doesn't correctly deal with banners served in
                                    different zones (Matteo)